hc: Better link full plugin snapshot

--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -315,7 +315,7 @@
 
                     <h4 id="docs-downloading-a-plugin">Downloading a plugin</h4>
 
-                    <p>You can download the plugin you want either via the Spartacus plugin (<b>recommended</b>) or by downloading a full plugin snapshot at <a href="https://github.com/ophian/additional_plugins/archive/master.zip">GitHub.com</a>.</p>
+                    <p>You can download the plugin you want either via the Spartacus plugin (<b>recommended</b>) or by downloading this full <a href="https://github.com/ophian/additional_plugins/archive/master.zip">plugin snapshot</a> via GitHub.com.</p>
 
                     <p>A plugin always consists of a single directory like eg. “serendipity_event_trackback” with at least one file in it. If you use GitHub already, the <a href="https://git-scm.com/docs/git-archive#_examples" rel="nofollow" target="_blank"><code>git-archive</code></a> command already supports exporting subdirectories, which are singular Serendipity plugins; see explanation on this <a href="../../plugins/">Styx Spartacus</a> page. Save that file on your Serendipity installation and extract it as a subdirectory of your /plugins directory. The path would then look like “plugins/serendipity_event_trackback/”. Inside that directory you then have the file “serendipity_event_trackback.php” and probably some more.</p>
 
