--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -287,7 +287,7 @@
 
                     <h4 id="docs-using-spartacus">Using SPARTACUS</h4>
 
-                    <p>Since Serendipity 0.8 we offer an Event Plugin called “SPARTACUS”. This is a repository manager plugin which is already install for your usage. It will then hook itself into the Serendipity <strong>plugin manager</strong> and each adds a new Link to “Install event/sidebar plugin”.</p>
+                    <p>Since Serendipity 0.8 we offer an Event Plugin called “SPARTACUS”. This is a repository manager plugin which is already installed for your usage. It will then hook itself into the Serendipity <strong>plugin manager</strong> and each adds a new Link to “Install event/sidebar plugin”.</p>
 
                     <p>If you click on that link, Serendipity will connect itself to our Plugin Repository, fetch a list of available plugins and offer those to you. Then you can click on the plugin to install just like you do with bundled plugins, and the files will automatically be downloaded.</p>
 
