--- a/hc/en/using-plugins.html
+++ b/hc/en/using-plugins.html
@@ -485,7 +485,7 @@
 
                     <h3 id="docs-entryproperties">Extended properties for entries (active)</h3>
 
-                    <p>This “very powerful” plugin allows entry caching via the plugin option and the backends maintenance section, allows password restricted /sticky / startpage entries, author changes and disabling markup plugins. In addition it can use custom fields in your theme at places where you want them to show up. For that, edit your entries.tpl template file and place Smarty tags like <code>{$entry.properties.ep_MyCustomField}</code> in the HTML where you like. Note the prefix <code>ep_</code> for each field. </p>
+                    <p>This “very powerful” plugin allows entry caching via the plugin option and the backends maintenance section, allows password restricted or sticky startpage entries, author changes and disabling markup plugins. In addition it can use custom fields in your theme at places where you want them to show up. For that, edit your entries.tpl template file and place Smarty tags like <code>{$entry.properties.ep_MyCustomField}</code> in the HTML where you like. Note the prefix <code>ep_</code> for each field. </p>
 
                     <p>Always place this plugin to the very end of your plugin list.</p>
 
@@ -495,7 +495,7 @@
 
                     <h3 id="docs-mailer">Mailer</h3>
 
-                    <p>Using this event plugin you can mail any articles you create to a single e-mail adress (which may be a mailing-list, of course).</p>
+                    <p>Using this event plugin you can mail any articles you create to a single e-mail address (which may be a mailing-list, of course).</p>
 
                     <h4 id="docs-configuration-15">Configuration</h4>
 
