--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2744,6 +2744,22 @@
         </ul>
     </div>
 
+    <div id="serendipity_event_vgwort" class="plugin">
+        <h4 class="plugin_summary">VG Wort (unofficial)</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_vgwort</dt>
+            <dd class="plugin_version">Version 0.3.2 (GPL, Last Updated 2018-10-08)</dd>
+            <dd class="plugin_maintainers">Malte Paskuda</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
+        </dl>
+        <p class="plugin_description">Integrate VG Wort counters into your blog.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_vgwort.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_vgwort">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_vgwort" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+        </ul>
+    </div>
+
 </section>
 
 <section id="group_STATISTICS" class="spartacus-group">
