--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-04)</dd>
+            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-11)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-04)</dd>
+            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-11)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1068,9 +1068,9 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 0.36 (GPL, Last Updated 2016-08-27)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Judebert</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.00 (GPL, Last Updated 2018-11-12)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, and RSS hiding.</p>
         <ul class="plugin_actions">
@@ -1788,7 +1788,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-04)</dd>
+            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-11)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1936,9 +1936,9 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 0.36 (GPL, Last Updated 2016-08-27)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Judebert</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.00 (GPL, Last Updated 2018-11-12)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, and RSS hiding.</p>
         <ul class="plugin_actions">
@@ -2132,9 +2132,9 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 0.36 (GPL, Last Updated 2016-08-27)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Judebert</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.00 (GPL, Last Updated 2018-11-12)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, and RSS hiding.</p>
         <ul class="plugin_actions">
@@ -2216,7 +2216,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2018-11-09)</dd>
+            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2018-11-11)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -2380,7 +2380,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2018-11-09)</dd>
+            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2018-11-11)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -2492,7 +2492,7 @@
         <h4 class="plugin_summary">Markup: Markdown</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_markdown</dt>
-            <dd class="plugin_version">Version 1.29 (GPL, Last Updated 2018-09-11)</dd>
+            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2018-11-12)</dd>
             <dd class="plugin_maintainers">Serendipity Team and Jan Lehnardt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
