--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1000,11 +1000,11 @@
         <h4 class="plugin_summary">HTML-Code inside head (HTML-Head Nugget)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_head_nugget</dt>
-            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2018-11-17)</dd>
             <dd class="plugin_maintainers">Jannis Hermanns</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">Allows you to insert HTML-Code into the HEAD-area of your blog. You can use this for meta-tags or JavaScript inclusion.</p>
+        <p class="plugin_description">Allows you to insert HTML-Markup into the HEAD-area of your blog. You can use this for meta-tags or JavaScript inclusion.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_head_nugget.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_head_nugget">GitHub</a></li>
@@ -1952,7 +1952,7 @@
         <h4 class="plugin_summary">RSS Aggregator</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_aggregator</dt>
-            <dd class="plugin_version">Version 1.00 (GPL (IDN converter) or BSD (Onyx) or BSD-3 (SimplePie), Last Updated 2018-03-27)</dd>
+            <dd class="plugin_version">Version 1.01 (GPL (IDN converter) or BSD (Onyx) or BSD-3 (SimplePie), Last Updated 2018-11-17)</dd>
             <dd class="plugin_maintainers">Evan Nemerson, Garvin Hicking, Kristian Koehntopp, Thomas Schulz, Claus Schmidt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.2</dd>
         </dl>
@@ -2004,7 +2004,7 @@
         <h4 class="plugin_summary">Comment Spice</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_commentspice</dt>
-            <dd class="plugin_version">Version 1.12 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_version">Version 1.13 (GPL, Last Updated 2018-11-17)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
