--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1068,11 +1068,11 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2018-11-24)</dd>
+            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2018-11-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.6.4</dd>
         </dl>
-        <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, and RSS hiding.</p>
+        <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, hiding from other entry lists including RSS.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_categorytemplates.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_categorytemplates">GitHub</a></li>
@@ -1348,7 +1348,7 @@
         <h4 class="plugin_summary">Links to next/previous entry</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrypaging</dt>
-            <dd class="plugin_version">Version 1.61 (GPL, Last Updated 2018-11-23)</dd>
+            <dd class="plugin_version">Version 1.62 (GPL, Last Updated 2018-11-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1936,11 +1936,11 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2018-11-24)</dd>
+            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2018-11-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.6.4</dd>
         </dl>
-        <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, and RSS hiding.</p>
+        <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, hiding from other entry lists including RSS.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_categorytemplates.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_categorytemplates">GitHub</a></li>
@@ -2132,11 +2132,11 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2018-11-24)</dd>
+            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2018-11-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.6.4</dd>
         </dl>
-        <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, and RSS hiding.</p>
+        <p class="plugin_description">This plugin provides additional properties for categories and their entries, including custom templates, sort order, display limit, password protection, hiding from other entry lists including RSS.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_categorytemplates.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_categorytemplates">GitHub</a></li>
