--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-11)</dd>
+            <dd class="plugin_version">Version 5.64 (GPL, Last Updated 2018-12-08)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -772,7 +772,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.70 (GPL, Last Updated 2018-11-03)</dd>
+            <dd class="plugin_version">Version 3.71 (GPL, Last Updated 2018-12-07)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-11)</dd>
+            <dd class="plugin_version">Version 5.64 (GPL, Last Updated 2018-12-08)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1428,8 +1428,8 @@
         <h4 class="plugin_summary">Show last modification date</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrylastmodified</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2018-08-15)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking</dd>
+            <dd class="plugin_version">Version 1.11 (GPL, Last Updated 2018-12-08)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Shows a message with the last modification date of an entry on the blogs frontpage. For not modified entries shows a message that says they are not modified.</p>
@@ -1644,9 +1644,9 @@
         <h4 class="plugin_summary">Contact Form</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contactform</dt>
-            <dd class="plugin_version">Version 1.28 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_version">Version 1.29 (GPL, Last Updated 2018-12-08)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Shows a email contactform on your blog as a static page. It can be accessed by either the custom permalink or by index.php?serendipity[subpage]=contactform. You can customize the look of the contact form by putting the plugin_contactform.tpl file into your template directory and modify it there. Captchas from the Spamblock plugin (if enabled) will be applied.</p>
         <ul class="plugin_actions">
@@ -1724,7 +1724,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.70 (GPL, Last Updated 2018-11-03)</dd>
+            <dd class="plugin_version">Version 3.71 (GPL, Last Updated 2018-12-07)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -1788,7 +1788,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.63 (GPL, Last Updated 2018-11-11)</dd>
+            <dd class="plugin_version">Version 5.64 (GPL, Last Updated 2018-12-08)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
