--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -269,7 +269,7 @@
                               <li><span class="var">serendipity_property_bag::set</span>: Setter</li>
                             </ul>
                           </li>
-                          <li><span class="var"><em>serendpity_plugin</em></span>: Central core class for plugins
+                          <li><span class="var"><em>serendipity_plugin</em></span>: Central core class for plugins
                             <ul>
                               <li><span class="var">serendipity_plugin::performConfig</span>: Perform configuration routines. Called by Serendipity when the plugin is being configured.</li>
                               <li><span class="var">serendipity_plugin::install</span>: Perform install routines</li>
