hc: Add mixed to edf13ac

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -150,7 +150,7 @@
                               <li><a href="#docs-serendipity-smarty-layer">Serendipity Smarty Layer</a></li>
                               <li><a href="#docs-smarty-variables">Smarty variables</a>
                                 <ul>
-                                  <li><a href="#docs-raw_data-mixed">$raw_data [mixed]</a></li>
+                                  <li><a href="#docs-raw_data-mixed">$raw_data [<span class="vartype-mixed">mixed</span>]</a></li>
                                   <li><a href="#docs-plugin_calendar_weeks-array-plugin_calendar_dow-array-plugin_calendar_head-array">$plugin_calendar_weeks [<span class="vartype-array">array</span>], $plugin_calendar_dow [<span class="vartype-array">array</span>], plugin_calendar_head [<span class="vartype-array">array</span>]</a></li>
                                   <li><a href="#docs-is_form-bool-category_image-string-form_url-string-categories-array">$is_form [<span class="vartype-bool">bool</span>], $category_image [<span class="vartype-str">string</span>], $form_url [<span class="vartype-str">string</span>], $categories [<span class="vartype-array">array</span>]</a></li>
                                   <li><a href="#docs-plugindata-array-pluginside-string">$plugindata [<span class="vartype-array">array</span>], $pluginside [<span class="vartype-str">string</span>]</a></li>
@@ -993,7 +993,7 @@ It is not advised to create your own  style_fallback.css file.</p>
 
 <p>Here is a list of commonly used Smarty variables within the Frontend .tpl files:</p>
 
-<h5 id="docs-raw_data-mixed">$raw_data [mixed]</h5>
+<h5 id="docs-raw_data-mixed">$raw_data [<span class="vartype-mixed">mixed</span>]</h5>
 
 <p>If a theme with an old-style “layout.php” is used, this contains the output from that layout.php code.</p>
 
