--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -224,7 +224,7 @@
         <h4 class="plugin_summary">Announce entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_weblogping</dt>
-            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2018-11-06)</dd>
+            <dd class="plugin_version">Version 1.16 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -464,7 +464,7 @@
         <h4 class="plugin_summary">Show Emoticon/Smiley toolbar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_emoticonchooser</dt>
-            <dd class="plugin_version">Version 3.27 (GPL, Last Updated 2018-11-03)</dd>
+            <dd class="plugin_version">Version 3.28 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jay Bertrandt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.66 (GPL, Last Updated 2019-02-01)</dd>
+            <dd class="plugin_version">Version 5.67 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -692,7 +692,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.77 (GPL, Last Updated 2018-11-09)</dd>
+            <dd class="plugin_version">Version 1.78 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.66 (GPL, Last Updated 2019-02-01)</dd>
+            <dd class="plugin_version">Version 5.67 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1068,7 +1068,7 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 1.91 (GPL, Last Updated 2018-12-23)</dd>
+            <dd class="plugin_version">Version 1.91 (GPL, Last Updated 2019-02-04)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7.0</dd>
         </dl>
@@ -1644,7 +1644,7 @@
         <h4 class="plugin_summary">Contact Form</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contactform</dt>
-            <dd class="plugin_version">Version 1.29 (GPL, Last Updated 2018-12-08)</dd>
+            <dd class="plugin_version">Version 1.30 (GPL, Last Updated 2019-02-07)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1660,7 +1660,7 @@
         <h4 class="plugin_summary">DSGVO / GDPR: General Data Protection Regulation</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dsgvo_gdpr</dt>
-            <dd class="plugin_version">Version 1.77 (GPL, Last Updated 2018-11-09)</dd>
+            <dd class="plugin_version">Version 1.78 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1788,7 +1788,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.66 (GPL, Last Updated 2019-02-01)</dd>
+            <dd class="plugin_version">Version 5.67 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1936,7 +1936,7 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 1.91 (GPL, Last Updated 2018-12-23)</dd>
+            <dd class="plugin_version">Version 1.91 (GPL, Last Updated 2019-02-04)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7.0</dd>
         </dl>
@@ -2132,7 +2132,7 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 1.91 (GPL, Last Updated 2018-12-23)</dd>
+            <dd class="plugin_version">Version 1.91 (GPL, Last Updated 2019-02-04)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7.0</dd>
         </dl>
@@ -2700,7 +2700,7 @@
         <h4 class="plugin_summary">Responsive Images</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_responsiveimages</dt>
-            <dd class="plugin_version">Version 0.7 (GPL, Last Updated 2018-10-23)</dd>
+            <dd class="plugin_version">Version 0.8 (GPL, Last Updated 2019-02-09)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3.1</dd>
         </dl>
@@ -2708,7 +2708,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_responsiveimages.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_responsiveimages">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_responsiveimages" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_responsiveimages" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_responsiveimages/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -2748,7 +2748,7 @@
         <h4 class="plugin_summary">VG Wort (unofficial)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_vgwort</dt>
-            <dd class="plugin_version">Version 0.3.2 (GPL, Last Updated 2018-10-08)</dd>
+            <dd class="plugin_version">Version 0.3.3 (GPL, Last Updated 2019-02-11)</dd>
             <dd class="plugin_maintainers">Malte Paskuda</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
